force-app/main/default/objects/LCF_Grant__c/LCF_Grant__c.object-meta.xml
<CustomObject>
    <description>Life Changes Fund Grant Management master object</description>
    <label>LCF Grant</label>
    <nameField>
        <displayFormat>GNT-{00000}</displayFormat>
        <label>Grant ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>LCF Grants</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>