force-app/main/default/objects/LCF_Grant__c/fields/ab_block_status__c.field-meta.xml
<CustomField>
    <fullName>ab_block_status__c</fullName>
    <description>Status of latest LCF grant achievement block</description>
    <inlineHelpText>Status of latest LCF grant achievement block</inlineHelpText>
    <label>Outcome Achievement Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grant_Form_Block_Status</valueSetName>
    </valueSet>
</CustomField>