force-app/main/default/objects/LCF_Grant__c/fields/am_block_status__c.field-meta.xml
<CustomField>
    <fullName>am_block_status__c</fullName>
    <description>Status of latest annual monitoring block</description>
    <inlineHelpText>Status of latest annual monitoring block</inlineHelpText>
    <label>Annual Monitoring Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grant_Form_Block_Status</valueSetName>
    </valueSet>
</CustomField>