force-app/main/default/objects/LCF_Grant__c/fields/Applicant_Organisation_Name__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Organisation_Name__c</fullName>
    <description>Organisation name of applicant</description>
    <formula>Application__r.Applicant_Organisation_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Organisation name of applicant</inlineHelpText>
    <label>Applicant Organisation Name</label>
    <type>Text</type>
</CustomField>