force-app/main/default/objects/LCF_Grant__c/fields/Applicant_Organisation_Sector__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Organisation_Sector__c</fullName>
    <description>Sector of applicant organisation</description>
    <formula>TEXT(Application__r.Applicant_Organisation_Sector__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Sector of applicant organisation</inlineHelpText>
    <label>Applicant Organisation Sector</label>
    <type>Text</type>
</CustomField>