force-app/main/default/objects/LCF_Grant__c/fields/Applicant_Organisation_Type__c.field-meta.xml
<CustomField>
    <fullName>Applicant_Organisation_Type__c</fullName>
    <description>Type of applicant organisation</description>
    <formula>TEXT(Application__r.Applicant_Organisation_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Type of applicant organisation</inlineHelpText>
    <label>Applicant Organisation Type</label>
    <type>Text</type>
</CustomField>