force-app/main/default/objects/LCF_Grant__c/fields/Application__c.field-meta.xml
<CustomField>
    <fullName>Application__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Application</label>
    <referenceTo>Application__c</referenceTo>
    <relationshipLabel>LCF Grants</relationshipLabel>
    <relationshipName>lcf_grants</relationshipName>
    <type>Lookup</type>
</CustomField>