force-app/main/default/objects/LCF_Grant__c/fields/Application_ID__c.field-meta.xml
<CustomField>
    <fullName>Application_ID__c</fullName>
    <formula>Application__r.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Application ID</label>
    <type>Text</type>
</CustomField>