force-app/main/default/objects/LCF_Grant__c/fields/bb_block_status__c.field-meta.xml
<CustomField>
    <fullName>bb_block_status__c</fullName>
    <description>Status of offer letter baseline block</description>
    <inlineHelpText>Status of offer letter baseline block</inlineHelpText>
    <label>Baseline Block Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grant_Form_Block_Status</valueSetName>
    </valueSet>
</CustomField>