force-app/main/default/objects/LCF_Grant__c/fields/bb_issue_status__c.field-meta.xml
<CustomField>
    <fullName>bb_issue_status__c</fullName>
    <description>Issue status of baseline block</description>
    <inlineHelpText>Issue status of baseline block</inlineHelpText>
    <label>Baseline Issue Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grant_Block_Issue_Status</valueSetName>
    </valueSet>
</CustomField>