force-app/main/default/objects/LCF_Grant__c/fields/Contact__c.field-meta.xml
<CustomField>
    <fullName>Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Project Contact</description>
    <inlineHelpText>Project Contact</inlineHelpText>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>LCF Grants</relationshipLabel>
    <relationshipName>LCF_Grants</relationshipName>
    <type>Lookup</type>
</CustomField>