force-app/main/default/objects/LCF_Grant__c/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>Project contact email</description>
    <inlineHelpText>Project contact email</inlineHelpText>
    <label>Contact Email</label>
    <type>Email</type>
</CustomField>