force-app/main/default/objects/LCF_Grant__c/fields/Contact_Organisation_Name__c.field-meta.xml
<CustomField>
    <fullName>Contact_Organisation_Name__c</fullName>
    <formula>Contact__r.Account.Name</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Contact Organisation Name</label>
    <type>Text</type>
</CustomField>