force-app/main/default/objects/LCF_Grant__c/fields/Number_of_Investors__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Investors__c</fullName>
    <description>Number of Investors</description>
    <inlineHelpText>Number of Investors</inlineHelpText>
    <label>Number of Investors</label>
    <summaryForeignKey>Form_LCF_Grant_Investor_1__c.lcf_grant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>