force-app/main/default/objects/LCF_Grant__c/fields/Number_of_Outcomes__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Outcomes__c</fullName>
    <description>Number of Agreed Outcomes</description>
    <inlineHelpText>Number of Agreed Outcomes</inlineHelpText>
    <label>Number of Outcomes</label>
    <summaryForeignKey>Form_LCF_Grant_Outcome_1__c.lcf_grant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>