force-app/main/default/objects/LCF_Grant__c/fields/Number_of_Payment_Triggers__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Payment_Triggers__c</fullName>
    <description>Number of payment triggers for this grant</description>
    <inlineHelpText>Number of payment triggers for this grant</inlineHelpText>
    <label>Number of Payment Triggers</label>
    <summaryForeignKey>Form_LCF_Payment_Trigger_1__c.lcf_grant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>