force-app/main/default/objects/LCF_Grant__c/fields/Number_of_Terms__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Terms__c</fullName>
    <description>Number of Additional Terms</description>
    <inlineHelpText>Number of Additional Terms</inlineHelpText>
    <label>Number of Terms</label>
    <summaryForeignKey>Form_LCF_Grant_Term_1__c.lcf_grant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>