force-app/main/default/objects/LCF_Grant__c/fields/pp_block_status__c.field-meta.xml
<CustomField>
    <fullName>pp_block_status__c</fullName>
    <description>Status of latest LCF payment profile block</description>
    <inlineHelpText>Status of latest LCF payment profile block</inlineHelpText>
    <label>Payment Profile Block Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grant_Form_Block_Status</valueSetName>
    </valueSet>
</CustomField>