force-app/main/default/objects/LCF_Grant__c/fields/pp_issue_status__c.field-meta.xml
<CustomField>
    <fullName>pp_issue_status__c</fullName>
    <description>Issue Status of latest LCF payment profile block</description>
    <inlineHelpText>Issue Status of latest LCF payment profile block</inlineHelpText>
    <label>Payment Profile Issue Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Grant_Block_Issue_Status</valueSetName>
    </valueSet>
</CustomField>