force-app/main/default/objects/LCF_Grant__c/fields/Primary_Commissioner__c.field-meta.xml
<CustomField>
    <fullName>Primary_Commissioner__c</fullName>
    <description>Application primary commissioner</description>
    <formula>Application__r.Primary_Commissioner__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Application primary commissioner</inlineHelpText>
    <label>Primary Commissioner</label>
    <type>Text</type>
</CustomField>