force-app/main/default/objects/LCF_Grant__c/fields/Primary_Outcome_Count__c.field-meta.xml
<CustomField>
    <fullName>Primary_Outcome_Count__c</fullName>
    <description>Count of primary outcomes (should be 1)</description>
    <inlineHelpText>Count of primary outcomes (should be 1)</inlineHelpText>
    <label>Primary Outcome Count</label>
    <summaryFilterItems>
        <field>Form_LCF_Grant_Outcome_1__c.primary__c</field>
        <operation>equals</operation>
        <value>True</value>
    </summaryFilterItems>
    <summaryForeignKey>Form_LCF_Grant_Outcome_1__c.lcf_grant__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>