force-app/main/default/objects/LCF_Grant__c/fields/Project_Name__c.field-meta.xml
<CustomField>
    <fullName>Project_Name__c</fullName>
    <description>Application project name</description>
    <formula>Application__r.Project_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Application project name</inlineHelpText>
    <label>Project Name</label>
    <type>Text</type>
</CustomField>