force-app/main/default/objects/LCF_Grant__c/fields/Project_Value__c.field-meta.xml
<CustomField>
    <fullName>Project_Value__c</fullName>
    <description>Application estimated total outcome payments</description>
    <formula>Application__r.Project_Value__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Application estimated total outcome payments</inlineHelpText>
    <label>Project Value</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>