force-app/main/default/objects/LCF_Grant__c/fields/Status__c.field-meta.xml
<CustomField>
    <fullName>Status__c</fullName>
    <description>Status of project associated with SIB Grant</description>
    <inlineHelpText>Status of project associated with SIB Grant</inlineHelpText>
    <label>Grant Status</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Not Started</fullName>
                <default>true</default>
                <label>Not Started</label>
            </value>
            <value>
                <fullName>Award Issued</fullName>
            </value>
            <value>
                <fullName>Award Accepted</fullName>
            </value>
            <value>
                <fullName>Project Launched</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>