force-app/main/default/objects/LCF_Grant__c/fields/Theme__c.field-meta.xml
<CustomField>
    <fullName>Theme__c</fullName>
    <description>Theme of application project</description>
    <formula>Application__r.Theme__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Theme of application project</inlineHelpText>
    <label>Theme</label>
    <type>Text</type>
</CustomField>