force-app/main/default/objects/LCF_Grant__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Status__c</columns>
    <columns>Application__c</columns>
    <columns>Contact__c</columns>
    <columns>Theme__c</columns>
    <columns>Project_Name__c</columns>
    <columns>Applicant_Organisation_Name__c</columns>
    <columns>Applicant_Organisation_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>